--- a/ShopManagement/Views/Dashboard/Dashboard.cshtml
+++ b/ShopManagement/Views/Dashboard/Dashboard.cshtml
@@ -33,7 +33,7 @@
                 </div>
             }
         </div>
-        <div class="row">
+        <div class="row" style="display:none;">
             <div class="col-lg-4 col-md-4 col-sm-12">
                 <div class="card card-statistic-2">
                     <div class="card-stats">
