--- a/ShopManagement/Views/Shared/_Layout.cshtml
+++ b/ShopManagement/Views/Shared/_Layout.cshtml
@@ -56,8 +56,8 @@
                                 <i class="far fa-user"></i> Change Password
                             </a>
                             <div class="dropdown-divider"></div>
-                            <a href="@Url.Action("Login", "Account")" class="dropdown-item has-icon text-danger">
-                                <i class="fas fa-sign-out-alt"></i> Logout
+                            <a href="javascript:void(0);" class="dropdown-item has-icon text-danger LogOut">
+                                <i class="fas fa-sign-out-alt LogOut"></i> Logout
                             </a>
                         </div>
                     </li>
@@ -248,6 +248,16 @@
                     break;
             }
         });
+
+        $(".LogOut").click(function () {
+            handleAjaxRequest(null, true, "/Method/LogOut", null, "CallBackLogOut");
+        });
+
+        function CallBackLogOut(responseData) {
+            if (responseData.message.status == "success") {
+                window.location.href = "@Url.Action("Login", "Account")";
+            }
+        }
 
     </script>
 </body>
