--- a/ShopManagement/Views/Account/ChangePassword.cshtml
+++ b/ShopManagement/Views/Account/ChangePassword.cshtml
@@ -15,26 +15,32 @@
                     <form method="POST">
                         <div class="form-group">
                             <label for="email">Old Password</label>
-                            <input id="email" type="email" class="form-control" name="email" tabindex="1" required autofocus>
+                            <input id="OldPassword" type="password" class="form-control" name="email" tabindex="1" required>
                         </div>
 
-                        <div class="form-group">
-                            <label for="password">New Password</label>
-                            <input id="password" type="password" class="form-control pwstrength" data-indicator="pwindicator" name="password" tabindex="2" required>
-                            <div id="pwindicator" class="pwindicator">
-                                <div class="bar"></div>
-                                <div class="label"></div>
+                        <div class="UpdatePassword" style="display:none;">
+                            <div class="form-group">
+                                <label for="password">New Password</label>
+                                <input id="password" type="password" class="form-control" required>
+                                <div id="pwindicator" class="pwindicator">
+                                    <div class="bar"></div>
+                                    <div class="label"></div>
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <label for="password-confirm">Confirm Password</label>
+                                <input id="password-confirm" type="password" class="form-control" required>
                             </div>
                         </div>
+                        
 
                         <div class="form-group">
-                            <label for="password-confirm">Confirm Password</label>
-                            <input id="password-confirm" type="password" class="form-control" name="confirm-password" tabindex="2" required>
-                        </div>
-
-                        <div class="form-group">
-                            <button type="submit" class="btn btn-primary btn-lg btn-block" tabindex="4">
+                            <button type="submit" class="btn btn-primary btn-lg btn-block" style="display:none;">
                                 Reset Password
+                            </button>
+                            <button type="submit" class="btn btn-primary btn-lg btn-block">
+                                Validate Password
                             </button>
                         </div>
                     </form>
