--- a/ShopManagement/Views/Account/UserProfile.cshtml
+++ b/ShopManagement/Views/Account/UserProfile.cshtml
@@ -3,16 +3,17 @@
     ViewBag.Title = "UserProfile";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<style>
+    .UserProfileImage{
+        cursor:pointer;
+    }
+</style>
 <section class="section">
     <div class="section-header">
         <h1>Profile</h1>
-        <div class="section-header-breadcrumb">
-            <div class="breadcrumb-item active"><a href="#">Dashboard</a></div>
-            <div class="breadcrumb-item">Profile</div>
-        </div>
     </div>
     <div class="section-body">
-        <h2 class="section-title">Hi, Divakar Jayagopi!</h2>
+        <h2 class="section-title">Hi, @Model.Name</h2>
         <p class="section-lead">
             Change information about yourself on this page.
         </p>
@@ -21,57 +22,69 @@
             <div class="col-12 col-md-12 col-lg-5">
                 <div class="card profile-widget">
                     <div class="profile-widget-header">
-                        <img alt="image" src="../../assets/img/avatar/avatar-1.png" class="rounded-circle profile-widget-picture">
+                        <img alt="image" src="@Model.Image" class="rounded-circle profile-widget-picture UserProfileImage">
+                        <input type="file" class="form-control invoice-input UserSelectedImage" id="UserImage" accept="image/x-png,image/gif,image/jpeg" style="padding:.375rem .75rem;display:none;">
                     </div>
                     <div class="profile-widget-description">
-                        <div class="profile-widget-name">Divakar Jayagopi<div class="text-muted d-inline font-weight-normal"><div class="slash"></div> Anna Nagar</div></div>
-                        Divakar Jayagopi is a superhero name in <b>India</b>, especially in my family. He is not a fictional character but an original hero in my family, a hero for his children and for his wife. So, I use the name as a user in this template. Not a tribute, I'm just bored with <b>'John Doe'</b>.
+                        <div class="profile-widget-name">@Model.Name<div class="text-muted d-inline font-weight-normal"><div class="slash"></div> @Model.Area</div></div>
+                        @if (string.IsNullOrEmpty(Model.Notes))
+                        {
+                            <div class="UserNotes"> <span class="text-warning">No description Found</span> </div>
+                        }
+                        else
+                        {
+                            <div class="UserNotes">@Model.Notes</div>
+                        }
+
                     </div>
                 </div>
             </div>
             <div class="col-12 col-md-12 col-lg-7">
                 <div class="card">
-                    <form method="post" class="needs-validation" novalidate="">
-                        <div class="card-header">
-                            <h4>Edit Profile</h4>
-                        </div>
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="form-group col-md-6 col-12">
-                                    <label>First</label>
-                                    <input type="text" class="form-control" value="Divakar Jayagopi" required="">
-                                    <div class="invalid-feedback">
-                                        Please fill in the first name
-                                    </div>
-                                </div>
-                                <div class="form-group col-md-6 col-12">
-                                    <label>Email</label>
-                                    <input type="email" class="form-control" value="divakarjayagopi@gmail.com" required="">
-                                </div>
+                    <div class="card-header">
+                        <h4>Edit Profile</h4>
+                    </div>
+                    <div class="card-body">
+                        <div class="row">
+                            <input type="hidden" class="UserId"/>
+                            <div class="form-group col-md-6 col-12">
+                                <label>Name</label>
+                                <input type="text" class="form-control UserName" value="@Model.Name">
                             </div>
-                            <div class="row">
-                                <div class="form-group col-md-5 col-12">
-                                    <label>Phone</label>
-                                    <input type="tel" class="form-control" value="8148563820">
-                                </div>
-                                <div class="form-group col-md-7 col-12">
-                                    <label>Area</label>
-                                    <input type="text" class="form-control" value="Anna Nagar" required="">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="form-group col-12">
-                                    <label>Bio</label>
-                                    <textarea class="form-control summernote-simple">Divakar Jayagopi is a superhero name in <b>India</b>, especially in my family. He is not a fictional character but an original hero in my family, a hero for his children and for his wife. So, I use the name as a user in this template. Not a tribute, I'm just bored with <b>'John Doe'</b>.</textarea>
-                                </div>
+                            <div class="form-group col-md-6 col-12">
+                                <label>Email</label>
+                                <input type="email" class="form-control EmailId" value="@Model.EmailId">
                             </div>
                         </div>
-                        <div class="card-footer text-right">
-                            <button class="btn btn-primary">Save Changes</button>
+                        <div class="row">
+                            <div class="form-group col-md-5 col-12">
+                                <label>Phone</label>
+                                <input type="tel" class="form-control UserMobileNumber" value=@Model.MobileNumber>
+                            </div>
+                            <div class="form-group col-md-7 col-12">
+                                <label>Area</label>
+                                <input type="text" class="form-control UserArea" value=@Model.Area>
+                            </div>
                         </div>
-                    </form>
+                        <div class="row">
+                            <div class="form-group col-12">
+                                <label>Bio</label>
+                                <textarea class="form-control summernote-simple UserNotes">@Model.Notes</textarea>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-footer text-right">
+                        <span class="customErrorMessageUdpateUserProfile"></span>
+                        <button class="btn btn-primary UpdateUserProfileInfo" data-UserId="@Model.Id">Save Changes</button>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
+
+<!-- General JS Scripts -->
+<script src="../../assets/modules/jquery.min.js"></script>
+<!-- JS Libraies -->
+<script src="../../assets/modules/izitoast/js/iziToast.min.js"></script>
+<script src="~/App-Assests/Js/User.js"></script>
