--- a/ShopManagement/Views/Shop/ViewAllShops.cshtml
+++ b/ShopManagement/Views/Shop/ViewAllShops.cshtml
@@ -80,7 +80,7 @@
                                     <div>
                                         <b>Area : <span data-id="@item.Id" class="ShopArea">@item.ShopArea</span></b><br />
                                         <b>Mobile : <span data-id="@item.Id" class="ShopMobileNumber">@item.MobileNumber</span></b><br />
-                                        <b>Orders : <span data-id="@item.Id" class="MaxOrderCountForShop">@item.MaxOrderCount</span></b><br />
+                                        <b>Orders : <span data-id="@item.Id" class="MaxOrderCountForShop">@item.TodaysOderCount / @item.MaxOrderCount</span></b><br />
                                         <span class="row" style="padding-left:14px;">
                                             <b>
                                                 Manager :
