--- a/ShopManagement/App-Assests/CSS/Custom.css
+++ b/ShopManagement/App-Assests/CSS/Custom.css
@@ -6,10 +6,10 @@
     border-color: #dc3545 !important;
 }
 
-.owl-theme .owl-nav {
+/*.owl-theme .owl-nav {
     margin-top: 10px;
     display: none !important;
-}
+}*/
 
 .customGalleryItems {
     width: 200px;
