--- a/ShopManagement/Views/Account/ChangePassword.cshtml
+++ b/ShopManagement/Views/Account/ChangePassword.cshtml
@@ -2,6 +2,11 @@
     ViewBag.Title = "ChangePassword";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<style>
+    .CustomPointer {
+        cursor: pointer;
+    }
+</style>
 <section class="section">
     <div class="section-header">
         <h1>Update Password</h1>
@@ -12,34 +17,66 @@
                 <div class="card-header"><h4>Change Password</h4></div>
 
                 <div class="card-body">
-                    <form method="POST">
-                        <div class="form-group">
+                    <form>
+                        <div class="form-group OldPasswordDiv">
                             <label for="email">Old Password</label>
-                            <input id="OldPassword" type="password" class="form-control" name="email" tabindex="1" required>
+                            <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <div class="input-group-text">
+                                        <i class="fas fa-lock"></i>
+                                    </div>
+                                </div>
+                                <input type="password" class="form-control OldPassword">
+                                <div class="input-group-append CustomPointer" id="OldPassword">
+                                    <div class="input-group-text">
+                                        <i class="fas fa-eye"></i>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
 
                         <div class="UpdatePassword" style="display:none;">
                             <div class="form-group">
-                                <label for="password">New Password</label>
-                                <input id="password" type="password" class="form-control" required>
-                                <div id="pwindicator" class="pwindicator">
-                                    <div class="bar"></div>
-                                    <div class="label"></div>
+                                <label for="NewPassword">New Password</label>
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <div class="input-group-text">
+                                            <i class="fas fa-lock"></i>
+                                        </div>
+                                    </div>
+                                    <input type="password" class="form-control NewPassword">
+                                    <div class="input-group-append CustomPointer" id="NewPassword">
+                                        <div class="input-group-text">
+                                            <i class="fas fa-eye"></i>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
 
                             <div class="form-group">
-                                <label for="password-confirm">Confirm Password</label>
-                                <input id="password-confirm" type="password" class="form-control" required>
+                                <label for="ConfirmPassword">Confirm Password</label>
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <div class="input-group-text">
+                                            <i class="fas fa-lock"></i>
+                                        </div>
+                                    </div>
+                                    <input type="password" class="form-control ConfirmPassword">
+                                    <div class="input-group-append CustomPointer" id="ConfirmPassword">
+                                        <div class="input-group-text">
+                                            <i class="fas fa-eye"></i>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                        
 
                         <div class="form-group">
-                            <button type="submit" class="btn btn-primary btn-lg btn-block" style="display:none;">
+                            <span class="customErrorMessageCheckPassword text-danger"></span>
+                            <button type="button" class="btn btn-primary btn-lg btn-block ResetPassword" style="display:none;">
                                 Reset Password
                             </button>
-                            <button type="submit" class="btn btn-primary btn-lg btn-block">
+                            <button type="button" class="btn btn-primary btn-lg btn-block ValidateOldPassword">
                                 Validate Password
                             </button>
                         </div>
@@ -49,3 +86,8 @@
         </div>
     </div>
 </section>
+
+<script src="../../assets/modules/jquery.min.js"></script>
+<!-- JS Libraies -->
+<script src="../../assets/modules/izitoast/js/iziToast.min.js"></script>
+<script src="~/App-Assests/Js/Account.js"></script>
