--- a/ShopManagement/Views/Order/ViewOrders.cshtml
+++ b/ShopManagement/Views/Order/ViewOrders.cshtml
@@ -19,60 +19,67 @@
     <div class="section-body">
         <div class="row">
             <div class="col-12 col-md-12 col-lg-12">
-                <div class="card">
-                    <div class="card-header">
-                        <h4>Orders</h4>
-                    </div>
-                    <div class="card-body">
-                        @if (Model.Count <= 0)
-                        {
-                            <div class="col-md-12">
-                                <div class="card card-warning">
-                                    <div class="card-header">
-                                        <h4>No Orders Found !</h4>
-                                    </div>
-                                    <div class="card-body" style="text-align:center;">
-                                        <p>Add Orders to see the list here.. <i><b><a href="@Url.Action("AddOrder", "Order")">Add Order</a></b></i></p>
-                                    </div>
+                <div class="card-body">
+                    @if (Model.Count <= 0)
+                    {
+                        <div class="col-md-12">
+                            <div class="card card-warning">
+                                <div class="card-header">
+                                    <h4>No Orders Found !</h4>
+                                </div>
+                                <div class="card-body" style="text-align:center;">
+                                    <p>Add Orders to see the list here.. <i><b><a href="@Url.Action("AddOrder", "Order")">Add Order</a></b></i></p>
                                 </div>
                             </div>
-                        }
-                        else
-                        {
-                            <table class="table table-striped table-responsive-lg" id="OrdersTable">
-                                <thead>
-                                    <tr>
-                                        <th scope="col">Image</th>
-                                        <th scope="col">Customer Name</th>
-                                        <th scope="col">Satus</th>
-                                        <th scope="col">Customer Mobile Number</th>
-                                        <th scope="col">Remaining Days</th>
-                                        <th scope="col">ShopName</th>
-                                        <th scope="col">Action</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    @foreach (var item in Model)
-                                    {
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="card">
+                            <div class="card-header">
+                                <h4>Orders</h4>
+                            </div>
+                            <div class="OdersTbllst">
+                                <table class="table table-striped table-responsive-lg" id="OrdersTable">
+                                    <thead>
                                         <tr>
-                                            <th scope="row"><img src="@item.Image" style="height:30px;width:30px" class="img img-responsive"/></th>
-                                            <td>@item.CustomerName</td>
-                                            <td>@item.Status</td>
-                                            <td>@item.CustomerMobileNumber</td>
-                                            <td>@item.DaysRemaining</td>
-                                            <td>@item.ShopName</td>
-                                            <td>
-                                                <a href="javascript:void(0);" data-id="@item.Id"><i class="fas fa-eye ViewOrderInfo" data-id="@item.Id"></i></a>
-                                                <a href="javascript:void(0);" data-id="@item.Id"><i class="fas fa-edit EditOrderInfo" data-id="@item.Id"></i></a>
-                                                <a href="javascript:void(0);" data-id="@item.Id"><i class="fas fa-trash DeleteOrder" data-id="@item.Id"></i></a>
-                                            </td>
+                                            <th scope="col">Image</th>
+                                            <th scope="col">Bill Number</th>
+                                            <th scope="col">Customer Name</th>
+                                            <th scope="col">Satus</th>
+                                            <th scope="col">Customer Mobile Number</th>
+                                            <th scope="col">Remaining Days</th>
+                                            <th scope="col">ShopName</th>
+                                            <th scope="col">Amount</th>
+                                            <th scope="col">Action</th>
                                         </tr>
-                                    }
-                                </tbody>
-                            </table>
-                        }
-                    </div>
+                                    </thead>
+                                    <tbody>
+                                        @foreach (var item in Model)
+                                        {
+                                            <tr>
+                                                <th scope="row"><img src="@item.Image" style="height:30px;width:30px" class="img img-responsive" /></th>
+                                                <td>@item.BillNumber</td>
+                                                <td>@item.CustomerName</td>
+                                                <td>@item.Status</td>
+                                                <td>@item.CustomerMobileNumber</td>
+                                                <td>@item.DaysRemaining</td>
+                                                <td>@item.ShopName</td>
+                                                <td>@item.Amount</td>
+                                                <td>
+                                                    <a href="javascript:void(0);" data-id="@item.Id"><i class="fas fa-eye ViewOrderInfo" data-id="@item.Id"></i></a>
+                                                    <a href="javascript:void(0);" data-id="@item.Id"><i class="fas fa-edit EditOrderInfo" data-id="@item.Id"></i></a>
+                                                    <a href="javascript:void(0);" data-id="@item.Id"><i class="fas fa-trash DeleteOrder" data-id="@item.Id"></i></a>
+                                                </td>
+                                            </tr>
+                                        }
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    }
                 </div>
+
             </div>
         </div>
     </div>
@@ -339,6 +346,7 @@
                 <div class="card">
                     <div class="card-body">
                         <input type="hidden" class="OrderId" />
+                        <input type="hidden" class="BillNumber" />
                         <div class="form-group">
                             <label>Customer Name</label>
                             <input type="text" class="form-control" id="CustomerName">
